--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div id="welcome-section">
         <h1 id="title">Phineas Ziegler</h1>
-        <p id="subtitle">computer guy</p>
+        <p id="subtitle">graphics guy</p>
     </div>
 
     <div id="projects">
